# graphql-starter-rust

./: .gitignore  .sample.docker.env  .sample.env  Cargo.toml  Dockerfile  Project-Details.md  README.Docker.md  Readme.md  compose.yaml  sample.env
db/: Cargo.toml  Readme.md
db/src/: env.rs  lib.rs
entity/: Cargo.toml  Readme.md
entity/src/: lib.rs
entity/src/definitions/: post.rs  prelude.rs  user.rs
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20220101_000001_create_user_table.rs  m20220101_000002_create_post_table.rs  main.rs
seeder/: Cargo.toml  Readme.md
seeder/src/: main.rs  post.rs  reset_db.rs  user.rs
server/: Cargo.toml  Readme.md
server/src/: graphql.rs  lib.rs  main.rs
server/src/entities/: mod.rs  post.rs  user.rs
server/src/graphql/: mod.rs  mutation.rs  query.rs
server/src/graphql/misc/: mod.rs
server/src/graphql/repositories/post/: delete.rs  find_one.rs  mod.rs  update.rs
server/src/graphql/repositories/user/: _mock.rs  create.rs  delete.rs  find_many.rs  find_one.rs  mod.rs  update.rs
server/src/misc/: connection.rs  mod.rs  responses.rs
server/src/repositories/: mod.rs
server/src/repositories/post/: create.rs  delete.rs  find_many.rs  find_one.rs  mod.rs  update.rs
server/src/repositories/user/: _mock.rs  create.rs  delete.rs  find_many.rs  find_one.rs  mod.rs  update.rs
src/: env.rs  general_response.rs  graphql.rs  health_check.rs  main.rs  user.rs
src/graphql/: mutation.rs  query.rs
src/misc/: env.rs
src/repositories/user/: _mock.rs  create.rs  definition.rs  find.rs  find_many.rs  find_one.rs  mod.rs
src/user/: create.rs  definition.rs
