[package]
name = "rust-graphql-starter"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = "0.6.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.0", features = ["env-filter"] }
async-graphql = "6.0.11"
async-graphql-axum = "6.0.11"
dotenv = "0.15.0"
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
