[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
server = { path = "../server" }
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
dotenv = "0.15.0"
sea-orm-migration = { version = "0.12.15", features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  "sqlx-postgres",
  "runtime-tokio-rustls",
] }
