[package]
name = "seeder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
server = { path = "../server" }
migration = { path = "../migration" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.0", features = ["env-filter"] }
dotenv = "0.15.0"
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "mock"] }
async-std = {version = "1.12.0", features = ["attributes"] }
chrono = "0.4.31"
fake = "2.9.2"
sea-orm-migration = "^0.12.0"