[package]
name = "seeder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }
db = { path = "../db" }
migration = { path = "../migration" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dotenv = "0.15.0"
sea-orm = { version = "0.12.15", features = [
	"sqlx-postgres",
	"runtime-tokio-rustls",
	"macros",
	"mock",
] }
async-std = { version = "1.12.0", features = ["attributes"] }
chrono = "0.4.38"
fake = "2.9.2"
sea-orm-migration = "0.12.15"
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
