[package]
name = "server"
version = "0.1.0"
edition = "2021"


[dependencies]
entity = { path = "../entity" }
axum = "0.7.5"
serde = { version = "1.0.23", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
async-graphql = "7.0.6"
async-graphql-axum = "7.0.6"
dotenv = "0.15.0"
sea-orm = { version = "0.12.15", features = [
	"sqlx-postgres",
	"runtime-tokio-rustls",
	"macros",
	"mock",
] }
async-std = { version = "1.12.0", features = ["attributes"] }
chrono = "0.4.38"
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"] }

[dev-dependencies]
fake = "2.9.2"
